// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip controlled matches snapshot when isVisible is false 1`] = `
<ForwardRef(TippyWrapper)
  delay={100}
  placement="top"
  plugins={
    Array [
      Object {
        "defaultValue": false,
        "fn": [Function],
        "name": "sticky",
      },
    ]
  }
  popperOptions={
    Object {
      "modifiers": Array [
        Object {
          "name": "computeStyles",
          "options": Object {
            "gpuAcceleration": false,
          },
        },
      ],
    }
  }
  render={[Function]}
  sticky={true}
  visible={false}
>
  <div>
    foo
  </div>
</ForwardRef(TippyWrapper)>
`;

exports[`Tooltip controlled matches snapshot when isVisible is true 1`] = `
<ForwardRef(TippyWrapper)
  delay={100}
  placement="top"
  plugins={
    Array [
      Object {
        "defaultValue": false,
        "fn": [Function],
        "name": "sticky",
      },
    ]
  }
  popperOptions={
    Object {
      "modifiers": Array [
        Object {
          "name": "computeStyles",
          "options": Object {
            "gpuAcceleration": false,
          },
        },
      ],
    }
  }
  render={[Function]}
  sticky={true}
  visible={true}
>
  <div>
    foo
  </div>
</ForwardRef(TippyWrapper)>
`;

exports[`Tooltip default props matches snapshot 1`] = `
<ForwardRef(TippyWrapper)
  delay={100}
  placement="top"
  plugins={
    Array [
      Object {
        "defaultValue": false,
        "fn": [Function],
        "name": "sticky",
      },
    ]
  }
  popperOptions={
    Object {
      "modifiers": Array [
        Object {
          "name": "computeStyles",
          "options": Object {
            "gpuAcceleration": false,
          },
        },
      ],
    }
  }
  render={[Function]}
  sticky={true}
>
  <div>
    foo
  </div>
</ForwardRef(TippyWrapper)>
`;
